fix details visibility

--- a/org.kevoree.talks.framework/src/main/resources/themes/kevs/styles/screen.css
+++ b/org.kevoree.talks.framework/src/main/resources/themes/kevs/styles/screen.css
@@ -12,6 +12,10 @@ body {
     font: 25px/2 'PT Sans', sans-serif;
 }
 
+.slide > details {
+    display: none;
+}
+
 /* Slide
 ------------------------------- */
 .slide {
